# AutoPTT-Sidekick

./: .clangd  .earthlyignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Descriptors.c  Descriptors.h  Earthfile  LICENSE  README.md  board-itsy-bitsy.mk  board-minimus.mk  cdc.c  cdc.h  cdc_test.c  cfg.example.mk  defs.h  keyboard.c  keyboard.h  main.c  shared.mk
.changes/: 1.0.0.md  1.0.1.md
.changes/unreleased/: Fixed-20260215-222546.yaml
